# outing-mining-rust

./: .gitignore  Cargo.toml  README.md  TODO  docker-compose.yml
docker/mysql/docker-entrypoint-initdb.d/: create_db.sql  initialize.sql
docker/rust/: Dockerfile
etc/: init.sh  nginx.conf  outing.minig.local.conf
public/: a.css  hello.html
public/js/: watch-login.js
src/: Makefile  auth.rs  background.rs  db.rs  hello.rs  main.rs  mongo.rs  oauth2callback.rs  serde_types.in.rs  summary.rs  tail_event.rs  top.rs  user.rs  util.rs  view_helper.rs  watch_login.rs
src/templates/: hello.hbs  layout.hbs  oauth2callback.hbs  top.hbs  watch_login.hbs
